[package]
name = "blam"
version = "0.1.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
edition = "2018"

build = "build.rs"

[dependencies]
chrono = "0.4.19"
float-ord = "0.2.0"
lalrpop-util = "0.19.1"
regex = "1.4.1"

[build-dependencies]
lalrpop = { version = "0.19.1", features = ["lexer"] }
