[package]
name = "blam"
version = "0.1.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
edition = "2018"

build = "build.rs"

[dependencies]
chrono = "0.4.19"
float-ord = "0.2.0"
lalrpop-util = "0.19.1"
regex = "1.4.1"
structopt = "0.3.20"
anyhow = "1.0.33"
log = "0.4.11"
env_logger = "0.8.1"

[build-dependencies]
lalrpop = { version = "0.19.1", features = ["lexer"] }
